# nesem

./: .ccls  .clang-format  .clang-tidy  .cmake-format.py  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: build-cmake-linux.yml  build-cmake-windows.yml  build.yml
cmake/: CompilerWarnings.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  vcpkg.cmake
data/: nes_colors.pal
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/include/cm/: math.hpp  math3d.hpp
src/app/include/ui/: app.hpp  audio_device.hpp  canvas.hpp  clock.hpp  renderer.hpp  texture.hpp
src/app/src/: app-main.cpp  app.cpp  audio_device.cpp  canvas.cpp  renderer.cpp  texture.cpp
src/main/: CMakeLists.txt  bottom_bar.cpp  bottom_bar.hpp  color_palette.cpp  color_palette.hpp  config.cpp  config.hpp  controller_overlay.cpp  controller_overlay.hpp  main.cpp  nes_app.cpp  nes_app.hpp  nes_overlay.cpp  nes_overlay.hpp  nesem.manifest  side_bar.cpp  side_bar.hpp  text.cpp  text.hpp
src/nes/: CMakeLists.txt  main.cpp  nes.cpp  nes.hpp  nes_addr.hpp  nes_apu.cpp  nes_apu.hpp  nes_bus.cpp  nes_bus.hpp  nes_cartridge.cpp  nes_cartridge.hpp  nes_cartridge_loader.cpp  nes_cartridge_loader.hpp  nes_clock.cpp  nes_clock.hpp  nes_cpu.cpp  nes_cpu.hpp  nes_cpu_ops.hpp  nes_input_device.hpp  nes_nvram.cpp  nes_nvram.hpp  nes_ppu.cpp  nes_ppu.hpp  nes_ppu_register_bits.hpp  nes_rom.cpp  nes_rom.hpp  nes_rom_loader.cpp  nes_rom_loader.hpp  nes_sha1.cpp  nes_sha1.hpp  nes_types.hpp
src/nes/include/: nes.hpp  nes_addr.hpp  nes_apu.hpp  nes_bus.hpp  nes_cartridge.hpp  nes_clock.hpp  nes_cpu.hpp  nes_input_device.hpp  nes_nvram.hpp  nes_ppu.hpp  nes_rom.hpp  nes_rom_loader.hpp  nes_types.hpp
src/nes/mapper/: nes_mapper_000.cpp  nes_mapper_000.hpp  nes_mapper_001.cpp  nes_mapper_001.hpp  nes_mapper_002.cpp  nes_mapper_002.hpp  nes_mapper_003.cpp  nes_mapper_003.hpp  nes_mapper_066.cpp  nes_mapper_066.hpp  nes_rom.cpp  nes_rom.hpp
src/nes/mappers/: nes_mapper_000.cpp  nes_mapper_000.hpp  nes_mapper_001.cpp  nes_mapper_001.hpp  nes_mapper_002.cpp  nes_mapper_002.hpp  nes_mapper_003.cpp  nes_mapper_003.hpp  nes_mapper_004.cpp  nes_mapper_004.hpp  nes_mapper_005.cpp  nes_mapper_005.hpp  nes_mapper_007.cpp  nes_mapper_007.hpp  nes_mapper_009.cpp  nes_mapper_009.hpp  nes_mapper_066.cpp  nes_mapper_066.hpp  nes_rom.cpp  nes_rom.hpp
src/nes/src/: nes.cpp  nes_20db_xml.hpp  nes_apu.cpp  nes_bus.cpp  nes_cartridge.cpp  nes_cartridge_loader.cpp  nes_cartridge_loader.hpp  nes_cpu.cpp  nes_cpu_ops.hpp  nes_nvram.cpp  nes_ppu.cpp  nes_ppu_register_bits.hpp  nes_rom.cpp  nes_rom_loader.cpp  nes_sha1.cpp  nes_sha1.hpp
src/nes/src/mappers/: nes_mapper_000.hpp  nes_mapper_001.cpp  nes_mapper_001.hpp  nes_mapper_002.hpp  nes_mapper_003.hpp  nes_mapper_004.hpp  nes_mapper_005.cpp  nes_mapper_005.hpp  nes_mapper_007.hpp  nes_mapper_009.hpp  nes_mapper_066.cpp  nes_mapper_066.hpp
src/tools/: CMakeLists.txt  embed.cpp
src/util/: CMakeLists.txt
src/util/include/util/: enum.hpp  flags.hpp  logging.hpp  preprocessor.hpp  ptr.hpp  rng.hpp
tests/: CMakeLists.txt  run_nestest.cpp  test_apu_channel.cpp  test_cpu_ops.cpp
